tests/paczka1/small_fuzzy/31082109.err
Error in line 3: eq3C S970 94,6
Error in line 7: S537 S537 30,1
Error in line 15: oRL S970 -2,3
